<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.christianresendiz.treasurehunt.DifficultyActivity">


    <TextView
        android:id="@+id/difficultyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/select_a_difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp" />

    <Button
        android:id="@+id/easyBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_below="@id/difficultyTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/easy" />

    <Button
        android:id="@+id/mediumBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/easyBtn"
        android:layout_marginTop="50dp"
        android:text="@string/medium" />

    <Button
        android:id="@+id/hardBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mediumBtn"
        android:layout_marginTop="50dp"
        android:text="@string/hard" />
</RelativeLayout>
